--- a/package.json
+++ b/package.json
@@ -40,18 +40,17 @@
     "fintech"
   ],
   "author": {
-    "name": "Wemerson Silva",
-    "email": "your-email@example.com"
+    "name": "Wemerson Silva"
   },
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/twelve-data-ts.git"
+    "url": "https://github.com/wemerson-silva-kz/twelve-data-ts.git"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/twelve-data-ts/issues"
+    "url": "https://github.com/wemerson-silva-kz/twelve-data-ts/issues"
   },
-  "homepage": "https://github.com/yourusername/twelve-data-ts#readme",
+  "homepage": "https://github.com/wemerson-silva-kz/twelve-data-ts#readme",
   "devDependencies": {
     "@types/bun": "latest",
     "typescript": "^5.0.0"
